# Stutern

./: .env.example  .gitignore  README.md  mcp_settings.json  pyproject.toml
mcp_postgres_server/: .env.example  README.md  mcp_settings.json  server.py
mcp_postgres_server/data/: fx_flows.csv
mcp_postgres_server/mcp_postgres_server/: server.py
mcp_postgres_server/sql/: load_fx_flows.sql
