[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-postgres-server"
version = "0.1.0"
description = "MCP server for read-only PostgreSQL queries (Python)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Your Name" }]
dependencies = [
  "mcp>=0.0.7",          # Model Context Protocol Python SDK
  "asyncpg>=0.29.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
mcp-postgres = "mcp_postgres_server.server:main"

[tool.setuptools]

[tool.setuptools.packages.find]
# Flat layout; include only our package and exclude non-packaging dirs
where = ["."]
include = ["mcp_postgres_server*"]
exclude = ["tests*", "sql*", "data*"]
